--- a/client/src/routes/home/styles.module.css
+++ b/client/src/routes/home/styles.module.css
@@ -1,3 +1,28 @@
 .MainDiv {
-  padding: 5%;
+  padding: 0 8%;
+}
+
+.AddGameDiv {
+  padding: 2% 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+.GamesCard {
+  padding: 5px 0;
+  background-color: beige;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.GameCardIndivDiv {
+  padding: 10px 0;
+  max-width: 33.33%;
+  min-width: 150px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
