--- a/client/src/routes/game/styles.module.css
+++ b/client/src/routes/game/styles.module.css
@@ -6,7 +6,7 @@
   padding: 2% 0;
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .GamesCard {
