added user input form

--- a/client/src/commonComponents/styles.module.css
+++ b/client/src/commonComponents/styles.module.css
@@ -13,3 +13,9 @@
   width: auto !important;
   align-self: center;
 }
+
+.FormRowGroup {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
