--- a/client/src/routes/game/styles.module.css
+++ b/client/src/routes/game/styles.module.css
@@ -9,6 +9,13 @@
   justify-content: space-between;
 }
 
+.AddGamesButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-self: center;
+}
+
 .GamesCard {
   padding: 5px 0;
   background-color: beige;
