to implement loading screen

--- a/client/src/commonComponents/styles.module.css
+++ b/client/src/commonComponents/styles.module.css
@@ -49,6 +49,12 @@
   width: fit-content;
   align-self: center;
 }
+.ListPlayer456 {
+  color: #ec902f;
+}
+
+.RemoveUserButton {
+}
 
 .ListPlayerButton {
   justify-self: flex-end;
