--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,11 @@
   flex-direction: row;
   justify-content: center;
 }
+
+.loading-center-spinner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
