--- a/client/src/commonComponents/styles.module.css
+++ b/client/src/commonComponents/styles.module.css
@@ -57,9 +57,15 @@
 }
 
 .ListPlayerButton {
-  justify-self: flex-end;
+  display: flex;
+  justify-content: space-around;
+  width: 70%;
 }
 
 .LogoutModalContainer {
   border: 0px !important;
+}
+
+.Italics {
+  font-style: italic;
 }
