--- a/client/src/routes/game/styles.module.css
+++ b/client/src/routes/game/styles.module.css
@@ -72,7 +72,13 @@
   width: 80% !important;
   height: 10px;
 }
-
+.TailCenterSpinDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-self: center;
+  width: 100%;
+}
 @media only screen and (max-width: 600px) {
   .FormRowDiv {
     display: flex;
