--- a/client/src/routes/game/styles.module.css
+++ b/client/src/routes/game/styles.module.css
@@ -21,11 +21,11 @@
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .GameCardIndivDiv {
-  min-width: 250px;
+  min-width: 300px;
   display: flex;
   flex-direction: row;
   justify-content: center;
